fix: Prevent navbar items from wrapping

--- a/public/css/lobby_style.css
+++ b/public/css/lobby_style.css
@@ -19,7 +19,7 @@ nav {
   border: solid 1px #323232;
   background: #212121;
   padding: 0;
-  width: 1040px;
+  width: 100%;
 }
 
 nav ul {
@@ -35,6 +35,7 @@ nav ul {
 
 nav li {
   display: inline-block;
+  white-space: nowrap;
 }
 
 nav > ul > li > a {
